<resources>
    <string name="app_name">MovieManagementApplication</string>
    <string name="action_rateApp">Rate Me!</string>
    <string name="action_settings">Settings</string>
    <!--Main Activity    -->
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="tv_continue">Continue without login</string>
    <string name="tv_hello">MOVIE MANAGEMENT APPLICATION</string>
    <!--Login                    -->
    <string name="login_et_username">Please enter your username</string>
    <string name="login_et_password">Please insert your password</string>
    <string name="login_btn_login">Login</string>
    <!--Register                    -->
    <string name="register_tv_username">Please enter your username</string>
    <string name="register_tv_password">Please insert your password</string>
    <string name="register_btn_register">Register</string>
    <!--       Movie             -->
    <string name="movie_title">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_plot">Plot Synopsis</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_release">Release Date</string>

    <!--    Movie Order-->
    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_key">sortOrder</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="action_about">About</string>
    <string name="tv_about">If you liked the app please leave a rating!</string>
    <string name="tv_aboutme">Alexandru Mihai Codreanu</string>
    <string name="tv_aboutmeGrupa">Grupa 1076</string>
    <string name="tv_aboutmeAn">An 2019</string>
    <string name="add_to_favourites">Added to favourites</string>
    <string name="movie_added_succes">Movie was added!</string>
    <string name="added_to_fav">Added to favorites!</string>
    <string name="fav_added">Favorite added</string>
    <string name="fav_removed">Favorite Removed!</string>
    <string name="removed_from_fav">Removed from favorites!</string>
    <string name="database_opened">Database opened!</string>
    <string name="database_closed">Database closed!</string>
    <string name="CREATE_TABLE">CREATE TABLE </string>
    <string name="INT_PRIMARYKEY">INTEGER PRIMARY KEY AUTOINCREMENT, </string>
    <string name="INT">INTEGER,</string>
    <string name="TXT_NOTNULL">TEXT NOT NULL, </string>
    <string name="REAL_NOTNULL">REAL NOT  NULL, </string>
    <string name="OPEN_BRKT">(</string>
    <string name="CLOSED_BRKT">); </string>
    <string name="favorite">Favorite Movies</string>
    <string name="export_csv">Export CSV</string>
    <string name="welcomeUSER">Welcome,</string>
    <string name="incorrect_acc_pass">Incorrect account/password!</string>
    <string name="account_settings">Account settings</string>
    <string name="show_favourites">Show favourites</string>
    <string name="internet_access_err">Make sure you are connected to the internet!</string>
    <string name="you_clicked">You clicked on</string>
    <string name="disconnect">Disconnect</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="please_introduce_your_new_password">Please introduce your new password!</string>
    <string name="please_insert_your_new_password">Please insert your new password</string>
    <string name="reset_now">Reset now</string>
    <string name="pw_reset">Your password was reset!</string>
    <string name="account_already_exists">This account already exists!</string>
    <string name="acc_succ_created">Your account was successfully created!</string>
    <string name="getting_data">Getting data!</string>
    <string name="received_data">Data has been received!</string>
    <string name="fetching_movies">Fetching movies...</string>
    <string name="not_fav_anymore">The movie is not in your favourites anymore!</string>
    <string name="no_fav_movies">There are no favourite movies!</string>
    <string name="refresh_list">Refresh list</string>
    <string name="list_refreshed">The list has been refreshed!</string>
    <string name="welcome">Welcome,</string>
    <string name="filter_your_movies">FILTER YOUR MOVIES</string>
    <string name="query_database">Query database</string>
    <string name="pw_too_short">Your account/password is too short! Min. 3 chars</string>
    <string name="success_firebase">You have succesfully logged in with FireBase!</string>
    <string name="problem_firebase">There has been a problem with Firebase.</string>
    <string name="show_live_users">Show live users</string>
    <string name="live_users_from_firebase">Live users from Firebase</string>
    <string name="show_graph">SHOW GRAPH</string>
    <string name="nr_times_added_to_fav">How many times a movie was added to favourites.</string>
    <string name="cinema_recommendation">CINEMA RECOMMENDATION</string>
    <string name="err_pw">Password must be longer than 3 chars.</string>
    <string name="favourite">favorite</string>
    <string name="movieid">movieid</string>
    <string name="title">title</string>
    <string name="db_rating">rating</string>
    <string name="db_posterpath">posterpath</string>
    <string name="db_plotsynopsis">plotsynopsis</string>
    <string name="rating_cursor">Rating:</string>
    <string name="movie_title_cursor">Movie title:</string>
    <string name="base_image_url">https://image.tmdb.org/t/p/w500</string>
    <string name="movie_Details_toolb">Movie Details</string>
    <string name="movie_refreshed">Movies Refreshed</string>
    <string name="s_list">\'s list</string>
    <string name="was_deleted">was deleted!</string>
    <string name="Afi_title">AFI Palace Cotroceni</string>


</resources>
