<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <Button
        android:id="@+id/account_settings"
        android:layout_width="414dp"
        android:layout_height="39dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/account_settings"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/show_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/graph"
        android:layout_width="405dp"
        android:layout_height="38dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/show_graph"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/account_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/maps"
        android:layout_width="405dp"
        android:layout_height="41dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/cinema_recommendation"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/graph"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/show_favourites"
        android:layout_width="416dp"
        android:layout_height="38dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/show_favourites"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/show_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/show_data"
        android:layout_width="405dp"
        android:layout_height="36dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/show_live_users"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="405dp"
        android:layout_height="37dp"
        android:layout_marginBottom="60dp"
        android:background="@color/colorBlack"
        android:paddingTop="@dimen/layout_mg_top"
        android:text="@string/disconnect"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/query"
        android:layout_width="409dp"
        android:layout_height="37dp"
        android:background="@color/colorBlack"
        android:text="@string/filter_your_movies"
        android:textColor="@color/colorGold"
        android:textSize="@dimen/mediumSize"
        app:layout_constraintBottom_toTopOf="@+id/account_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />


</androidx.constraintlayout.widget.ConstraintLayout>