<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_mg_lt"
                android:layout_marginTop="@dimen/layout_mg_top"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favoriteButtonContent"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_below="@id/movieTitle"
                android:background="@color/colorGold"
                app:layout_constraintLeft_toLeftOf="@id/rating" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/movieTitle"
                android:layout_marginLeft="@dimen/layout_mg_lt"
                android:layout_marginTop="@dimen/layout_mg_top"
                android:text="@string/movie_rating"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rating"
                android:layout_marginLeft="@dimen/layout_mg_lt"
                android:layout_marginTop="@dimen/layout_mg_top"
                android:text="@string/movie_release"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotsynopsis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/layout_mg_lt"
                android:layout_marginTop="@dimen/layout_mg_top"
                android:padding="@dimen/padding_layout"
                android:text="@string/movie_plot"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

</RelativeLayout>