<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"

    tools:context=".UserAccessManagement.MainActivity">


    <Button
        android:id="@+id/button_login"
        android:layout_width="88dp"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorWhite"
        android:text="@string/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_below="@id/button_login"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorWhite"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.184" />



    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="236dp"
        android:layout_height="116dp"
        android:text="@string/tv_hello"
        android:textAlignment="center"
        android:textColor="@color/colorGold"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

</androidx.constraintlayout.widget.ConstraintLayout>