<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".UserAccessManagement.Register">

    <EditText
        android:id="@+id/register_tv_username"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:hint="@string/register_tv_username"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/register_tv_password"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:textColor="@color/colorBlack"
        android:hint="@string/register_tv_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_username"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_password"
        app:layout_constraintVertical_bias="0.348" />
</androidx.constraintlayout.widget.ConstraintLayout>